--- a/index.html
+++ b/index.html
@@ -22,3 +22,79 @@
         </nav>
         </section>
     </header>
+    <main>
+        <section class="background">
+            <h1>Welcome!</h1>
+            <p>
+                Our cookies are best enjoyed at room temperature, but if you like them extra soft, simply bake them in the oven at 300°F (150°C), or 8 minutes if frozen. Boom, a melted center and maximum enjoyment.
+            </p>
+        </section>
+        <section class = "about-section">
+                <h2>About</h2>
+                <p>
+                    You're wondering who we are? Are we one, are we two? Are we a girl, a boy? I think I'll keep a little mystery around this, but I'll allow myself to tell you a little more about me... I have to say that you're going to need my cookies at least once a week... A real love story, this cookie story...
+                </p>
+                <p>
+                    All our cookies are 100% homemade, made the same day according to strict hygiene and sanitation regulations.
+                    Cookies stored in their original box will remain fresh and soft for 3-4 days. The best before date is indicated on each box delivered.
+                    Our cookies can easily be reheated in the oven at 180°C for 5 minutes.
+                    Each classic cookie weighs between 80 and 90g. COOKIE SHOTS weigh between 60 and 70g. The BIGGY weighs between 450 and 700g..
+                </p>
+                <p>
+                    "100% personalized service for your professional events"
+                    Are you a business? Are you looking for something new and delicious?
+                    We support you for all your events, customer promotions, store openings, and product launches with a 100% personalized service: co-branded packaging and custom creations tailored to your projects.
+                </p>
+            </section>
+            <section id = "popular-section"><h2>Popular Cookies</h2></section>
+                <section class="container">
+                        <section class ="card">
+                        <img src="images/matchacookie.png" alt="matcha">
+                              <section class="heart"></section>
+                              <section class="shoppingcard"></section>
+                              <h3>Matcha Cookie</h3>
+                               <p>Japanese matcha Cookiey with delicious pieces of Valhrona white chocolate. The perfect cookie for matcha aficionados!</p>
+                               <p class="price">$4.60 us</p>
+                          </section>
+                        <section class ="card"> 
+                          <img src="images/snickycookie.png" alt="Snicky">
+                              <section class="heart"></section>
+                              <section class="shoppingcard"></section>
+                            <h3>Snicky</h3>
+                            <p>A chocolate cookie dough base, milk chocolate chunks, vanilla/salted butter caramel, peanuts and a touch of Maldon</p>
+                            <p class="price">$4.50 us</p>
+                        </section>
+                        <section class ="card">
+                        <img src="images/dreamycookie.png" alt="Dreamy">
+                        <section class="heart"></section>
+                        <section class="shoppingcard"></section>
+                            <h3>Dreamy</h3>
+                            <p>A chocolate cookie dough, the chocolate trio (because we can never choose between milk, white or dark)</p>
+                            <p class="price">$4.60 us</p>
+                        </section>
+                        <section class ="card">
+                        <img src="images/veggycookie.png" alt="veggy">
+                        <section class="heart"></section>
+                        <section class="shoppingcard"></section>
+                            <h3>Veggy</h3>
+                            <p>A 100% vegan cookie dough with a delicious vanilla and caramel flavor!An extraordinary texture for a cookie!</p>
+                            <p class="price">$4.70 us</p>
+                        </section>
+                        <section class ="card">
+                        <img src="images/browniecookie.png" alt="browniee">
+                        <section class="heart"></section>
+                        <section class="shoppingcard"></section>
+                            <h3>Brownie</h3>
+                            <p>Like a Brownie... Peanut batter, milk chocolate, roasted pecans, homemade vanilla caramel, cocoa nibs and fleur de sel</p>
+                            <p class="price">$4.60 us</p>
+                        </section>
+                        <section class ="card">
+                          <img src="images/dulcycookie.png" alt="dulcy">
+                        <section class="heart"></section>
+                        <section class="shoppingcard"></section>
+                            <h3>Dulcy</h3>
+                            <p>A vanilla cookie dough base, generous chunks of Dulcey chocolate, and toasted almonds.</p>
+                            <p class="price">$4.50 us</p>
+                        </section>
+                </section>
+                    </main>
