new section footer

--- a/index.html
+++ b/index.html
@@ -98,3 +98,43 @@
                         </section>
                 </section>
                     </main>
+                    <footer>
+                        <section class="footer_continer">
+                            <section>
+                              <h2>WHO WE ARE</h2>
+                              <ul class="footer_list">
+                                  <li><a href="#">About</a> </li>
+                                  <li><a href="#">Team</a></li>
+                                  <li><a href="#">Work With Us</a></li>
+                                  <li>
+                                      <ul id="list-socialicon">
+                                      <li> 
+                                        <a href="https://twitter.com/?lang=en"><img class="social-icon" src="images/twitter-icon.png" alt="twitter"></a>
+                                      </li>
+                                      <li>
+                                        <a href="https://www.facebook.com/"><img class="social-icon" src="images/Facebook-icon.png" alt="facebook"></a>
+                                      </li>
+                                      <li>
+                                        <a href="https://www.instagram.com/"><img class="social-icon" src="images/instagram-icon.png" alt="instagram"></a>
+                                      </li>
+                                  </ul>
+                                  <p id="copyrights">© 2025 Cookies</p>
+                              </li>
+                          </ul>
+                        </section>
+                          <section>
+                              <h2>FOLLOW US</h2>
+                              <ul class="footer_list">
+                                  <li>
+                                      <a href="https://twitter.com/?lang=en">Twitter</a></li>
+                                  <li>
+                                      <a href="https://www.facebook.com/">Facebook</a></li>
+                                  <li>
+                                      <a href="https://www.instagram.com/">Instagram</a></li>
+                              </ul>
+                         </section>
+                        </section>
+                  </footer> 
+                </body>
+                </html>
+                
