new section main

--- a/about.html
+++ b/about.html
@@ -22,3 +22,56 @@
         </nav>
         </section>
     </header> 
+    <main>
+        <section class="Our-cookies">
+            <img src="images/product1.png" alt="Product 1" class="oval-frame" id="IMG1">
+            <img src="images/product2.png" alt="Product 2" class="oval-frame" id="IMG2">
+            <img src="images/product3.png" alt="Product 3" class="oval-frame" id="IMG1">
+        </section>
+        <section id= "List-cookie-section">
+            <h2>List of Cookies</h2>
+            <ul>
+                <li class="cookie-Product">
+                  <section class="cookie-Element">
+                    <img src="IMAGES/circle.png" alt="circle" >
+                    <img src="IMAGES/Fusee.png" alt="Rocket" >
+                  </section>
+                  <h3>Individual cookie</h3>
+                </li>
+                <li class="cookie-Product">
+                    <section class="cookie-Element">
+                      <img src="IMAGES/circle.png" alt="circle" >
+                      <img src="IMAGES/Fusee.png" alt="Rocket" >
+                    </section>
+                    <h3>Brownies</h3>
+                  </li>
+                  <li class="cookie-Product">
+                    <section class="cookie-Element">
+                      <img src="IMAGES/circle.png" alt="circle" >
+                      <img src="IMAGES/Fusee.png" alt="Rocket" >
+                    </section>
+                    <h3>Vegan and Free Gluten</h3>
+                  </li>
+                  <li class="cookie-Product">
+                    <section class="cookie-Element">
+                      <img src="IMAGES/circle.png" alt="circle" >
+                      <img src="IMAGES/Fusee.png" alt="Rocket" >
+                    </section>
+                    <h3>Valentine Box Cookies</h3>
+                  </li>
+                  <li class="cookie-Product">
+                    <section class="cookie-Element">
+                      <img src="IMAGES/circle.png" alt="circle" >
+                      <img src="IMAGES/Fusee.png" alt="Rocket" >
+                    </section>
+                    <h3>Biggy Cookies</h3>
+                  </li>
+            </ul>
+        </section>
+        <section id="Video">
+            <h2 class="section_Video">Video</h2>
+            <section class="youtube-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wfn9oC-_nVQ?si=NViTY2MyMHXEz3-3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+        </section>
+    </main>
